feat(api): add batch cancellation of workers and tasks by uuid
